1、删除application.yml中读取数据源为配置文件的配置参数 2、更新system模块中dao层的接口为Dao结尾 3、更新SpringBoot的项目jar包的运行脚本，删除无用的启动参数